# Juniper-R2

./: .gitignore  Cargo.toml  deno.jsonc  package.json  pnpm-lock.yaml
crates/juniper-cli/: Cargo.toml
crates/juniper-cli/src/: main.rs
crates/juniper-core/: Cargo.toml
crates/juniper-core/src/: lib.rs
crates/juniper-modelsets/: Cargo.toml
include/: Template.modelfile
include/data/: INSTRUCTIONS.md  LANGUAGE.md
juniper-cli/: Cargo.toml
juniper-core/: Cargo.toml
juniper-core-plugin/: Cargo.toml
scripts/: Get-TokenTree.ps1  Invoke-ModelBuilder.ps1
