[package]
name = "juniper-cli"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
clap = { version = "4.5.37", features = ["derive"] }
juniper-core = { version = "0.0.0", path = "../juniper-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
