[package]
name = "juniper-core"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
warp = "0.3.7"
